ui: revamp set/entry relations. new tab 'relations' replaces old 'parents', show siblings and children as well
commit e35e28797289d3656975719db263ca8c9d5a8b76
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 28 13:35:26 2014 +0100

    fix test (temp)

commit 8dfc9222ddb2345028d3bd074b4ae458bf888f7d
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 27 17:55:48 2014 +0100

    template: partial: media_resources: split out partial mr_thumbnail

commit 5c26671d16728d5284a27f26b5cb2dd1702a1eb9
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 27 17:55:09 2014 +0100

    template: partial: media_resources: implement 'res_link_type' switch (to config which path helper is used to construct the link on a thumbnail)

commit 5ad81e79c1b55364962746b07fffad7f808a5186
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 27 17:51:25 2014 +0100

    fix/rename list partial

commit 3fbf5e72da89ba5d973bde13097fe4d9280a5bfb
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 24 17:27:45 2014 +0200

    entries: implement children, siblings; better separation, correctly show tab

commit 0110177ef256658d4030fc6bb9c38047d5f96a71
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 24 17:10:53 2014 +0200

    sets: implement children, siblings; better separation, correctly show tab

commit 0bdf8027934dea26c2ac0279ee21bc7e3110c86e
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 24 13:19:09 2014 +0200

    make partial work for Sets and Entries

commit 35c03752f183bf4d72d383c20dd31a44fbba6cfa
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 24 13:18:47 2014 +0200

    fix error in stylesheet

commit 7f3804613fb5d10cd6917679de0b0e754f30efc1
Author: Max F. Albrecht <1@178.is>
Date:   Thu Oct 23 13:08:54 2014 +0200

    split out _relations partial, use for entries and sets

commit bb870bbd13b3ddc39af1d832dfdca08838b7a040
Author: Max F. Albrecht <1@178.is>
Date:   Thu Oct 23 13:08:22 2014 +0200

    rename/redirect: entries/parents => entries/relations

commit 09ade0e899461cacfaa918b93091

--- a/app/assets/stylesheets/views/_relationships.sass
+++ b/app/assets/stylesheets/views/_relationships.sass
@@ -8,7 +8,7 @@
 .relationships-siblings
   position: relative
   margin-left: 220px
-.relationships-this-wrapper
+.relationships-this-wrapper.pointing-bottom
   &:after,
   &:before
     border: solid transparent
