--- a/app/views/media_entries/_tabs.html.haml
+++ b/app/views/media_entries/_tabs.html.haml
@@ -1,15 +1,17 @@
 %ul.ui-tabs.large
   %li.ui-tabs-item{:class => media_entry_show_page? ? "active" : ""}
     %a{:href => media_entry_path(@media_entry)}= @main_context_group.name
-  - if @media_entry.parents.accessible_by_user(current_user,:view).any?
-    %li.ui-tabs-item{:class => media_entry_parents_page? ? "active" : ""}
-      %a.parent_sets{:href => parents_media_entry_path(@media_entry)} Übergeordnete Sets
+
+  - if @has_any_relations
+    %li.ui-tabs-item{:class => media_entry_relations_page? ? "active" : ""}
+      %a.parent_sets{:href => relations_media_entry_path(@media_entry)}
+        = _("Zusammenhänge")
 
   - unless @media_entry.individual_contexts.blank?
 
     %li.ui-tabs-item{:class => media_entry_contexts_page? ? "active" : ""}
       %a{:href => contexts_media_entry_path(@media_entry)}= _("Vokabular")
-  
+
   - if @media_entry.has_location?
     %li.ui-tabs-item{:class => media_entry_map_page? ? "active" : ""}
       %a{:href => map_media_entry_path(@media_entry)} Karte
