ui: meta_data: fix 'skip empty values' option

--- a/app/views/meta_data/_keywords.html.haml
+++ b/app/views/meta_data/_keywords.html.haml
@@ -1,4 +1,4 @@
-- if keywords.any?
+- unless keywords.blank?
   %ul.ui-tag-cloud.small.ellipsed
     - keywords.each do |keyword|
       %li.ui-tag-cloud-item
