Finish ZHdK specific InstGrp. filtering in Gem
Squashed commit of the following:

commit dd4322b0e950c28eba3aa3ebb2151df6ad70639f
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 11:45:19 2014 +0100

    use normal version of zhdk_integration gem again

commit 67f3be6d8f4bf31170184d35cd1e10c79f19cdef
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 11:30:18 2014 +0100

    clean up test

commit 032d1b0f1e257f152a2de59f2e6ece74679facb2
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 11:29:51 2014 +0100

    Revert "tmp: make the basic test run without zhdk_integration"

    This reverts commit 69f7331193db1292c2336e49e04463d5daee470a.

commit 03e9ac98bc0e835a4a3c5c39f1ca37b7c73c66dc
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 11:04:24 2014 +0100

    fixup "hack for config in cider"

commit 72f23a0874e47dc3f50f696749d7c2a8bfd90af1
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 31 15:07:15 2014 +0100

    Revert "hack for config in cider"

    This reverts commit 7086346d75c6615984b5e27b9a3e3b5a923d5b76.

commit 69f7331193db1292c2336e49e04463d5daee470a
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 31 15:06:25 2014 +0100

    tmp: make the basic test run without zhdk_integration

commit 7086346d75c6615984b5e27b9a3e3b5a923d5b76
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 31 14:49:31 2014 +0100

    hack for config in cider

commit 31c3adc415ed4f48262901e9c7080ea58d11cf79
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 31 14:31:51 2014 +0100

    try to fix the tests

commit 8beb0b2c44f7192c8dea58b721e3293d64cf6ed9
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 31 14:16:22 2014 +0100

    mark .to_s as to-be-overwritten

commit 5c15da0d4845c85acb28f490696c2b5929779720
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 31 14:08:43 2014 +0100

    fix: make it a closed list (only existing entries are allowed)

commit ccecec22cb860824e6cf7f8c4001f2c86301c58c
Author: Max F. Albrecht <1@178.is>
Date:   Fri Oct 31 13:31:39 2014 +010

--- a/app/views/media_resources/edit/fields/_meta_datum_institutional_groups.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_institutional_groups.html.haml
@@ -11,8 +11,8 @@
           .icon-close
 
     %li.multi-select-input-holder.mbs
-      %input.multi-select-input.institutional_affiliation_autocomplete_search{:id => "resource[meta_data_attributes][#{@i}][value]",
+      %input.multi-select-input.form-autocomplete-extensible-list.closed-list{:id => "resource[meta_data_attributes][#{@i}][value]",
                                 :type => "text", 
-                                :"data-values" => InstitutionalGroup.selectable.collect {|group| {:label => group.to_s, :id => group.id}}.to_json}
+                                :"data-terms" => InstitutionalGroup.selectable.collect {|group| {:value => group.to_s, :id => group.id}}.to_json}
         %a.multi-select-input-toggle
           %i.icon-arrow-down
