ui: finish set/entry relations
- adds subviews for parents, siblings, children
- make 'Visualize' button work same as menu entry
- add tests for alle features

Squashed commit of the following:

commit decd248f0296aeb059ee4520f96232509348fdfb
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 17:20:57 2014 +0100

    show 'visualisation' button using same rules as menu entry

commit 0e27c85ec66e69bfdba63437e88cca7a7a287cbd
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 17:10:51 2014 +0100

    remove obsolete template

commit aa14b2043cced71bbf96bfc8d88c12bf47f78e17
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 16:28:13 2014 +0100

    test: entry and set

commit a4425d29801c4cae24914da894768c2856a8cf27
Author: Max F. Albrecht <1@178.is>
Date:   Mon Nov 3 15:21:51 2014 +0100

    add a test

commit 3ca2490516447047b57b0f739cba4277ff539a93
Author: Max F. Albrecht <1@178.is>
Date:   Wed Oct 29 13:08:43 2014 +0100

    fix alignments

commit b07a11064446ae8c182e58919d0b590b50a246f3
Author: Max F. Albrecht <1@178.is>
Date:   Wed Oct 29 13:08:30 2014 +0100

    make sub views work for entries

commit c2ab1a9947eef6dcf8408fe9ba7c5eb8deed9507
Author: Max F. Albrecht <1@178.is>
Date:   Wed Oct 29 13:07:46 2014 +0100

    more dots

commit 8b2b6868f432a447aac436d86251dea8b25d49bb
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 28 21:51:33 2014 +0100

    type detail view: link to main in header

commit 8feb463fb3acb016f5d2f64f4c0f8e5869b360b2
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 28 21:40:16 2014 +0100

    set, entries: more padding below container

    so the overlays are not above footer

commit 0ae73001f924cf3c49ae2ff1aad97f4f29da00d6
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 28 21:39:49 2014 +0100

    detail view for relations by type

commit fc85d958ac237b65bd85db9af9b458243643ce7d
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 28 20:27:45 2014 +0100

    only show link to all when there are any

commit 09d7ec4a115a87c12d1f1

--- a/app/views/media_entries/relations.html.haml
+++ b/app/views/media_entries/relations.html.haml
@@ -4,6 +4,18 @@
   @description = "Der ausgewählte Eintrag ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet oder benachbart. \nSie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen."
 
 - content_for :content do
-  = render "media_resources/relations"
+  
+  - case params[:type]
+  - when 'parents'
+    = render partial: "media_resources/relations/by_type",
+              locals: { title: _("Übergeordnete Sets."),
+                        media_resources: @parents }
+
+  - when 'siblings'
+    = render partial: "media_resources/relations/by_type",
+              locals: { title: _("Benachbarte Sets."),
+                        media_resources: @siblings }
+  - else
+    = render "media_resources/relations"
 
 = render "media_entries/layout"
