--- a/app/views/media_sets/_layout.html.haml
+++ b/app/views/media_sets/_layout.html.haml
@@ -17,7 +17,7 @@
 
       = render :partial => "media_sets/tabs"
 
-      .ui-container.tab-content.bordered.rounded-right.rounded-bottom
+      .ui-container.tab-content.bordered.rounded-right.rounded-bottom.mbh
         = yield :content
 
   .app-footer-push
