--- a/app/views/media_entries/_layout.html.haml
+++ b/app/views/media_entries/_layout.html.haml
@@ -18,7 +18,7 @@
 
       = render :partial => "media_entries/tabs"
 
-      .ui-container.bordered.tab-content.rounded-right.rounded-bottom
+      .ui-container.bordered.tab-content.rounded-right.rounded-bottom.mbh
         = yield :content
 
   .app-footer-push
