--- a/app/views/media_sets/relations.html.haml
+++ b/app/views/media_sets/relations.html.haml
@@ -4,6 +4,21 @@
   @description = "Das ausgewählte Set ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet, benachbart oder untergeordnet. \nSie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen."
 
 - content_for :content do
-  = render "media_resources/relations"
+  
+  - case params[:type]
+  - when 'parents'
+    = render partial: "media_resources/relations/by_type",
+              locals: { title: _("Übergeordnete Sets."),
+                        media_resources: @parents }
+  - when 'children'
+    = render partial: "media_resources/relations/by_type",
+              locals: { title: _("Untergeordnete Sets."),
+                        media_resources: @children }
+  - when 'siblings'
+    = render partial: "media_resources/relations/by_type",
+              locals: { title: _("Benachbarte Sets."),
+                        media_resources: @siblings }
+  - else
+    = render "media_resources/relations"
 
 = render "media_sets/layout"
