--- a/app/views/filter_sets/_section.html.haml
+++ b/app/views/filter_sets/_section.html.haml
@@ -1,6 +1,6 @@
-%li.ui-resource{id: section[:name]}
+%li.ui-resource{id: section[:id]}
   .ui-thumbnail.media-catalog
-    %a.ui-thumbnail-image-wrapper{:href => explore_section_path(category_set, section[:name])}
+    %a.ui-thumbnail-image-wrapper{:href => explore_section_path(category_set, section[:id])}
       .ui-thumbnail-image-holder
         .ui-thumbnail-table-image-holder
           .ui-thumbnail-cell-image-holder
