--- a/app/views/media_resources/edit/fields/_meta_datum_string.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_string.html.haml
@@ -1,4 +1,4 @@
-- unless (definition.input_type === 'text_area') || (definition.length_max && definition.length_max > 255)
+- unless definition.is_multiline?
   %input.block{:id => "resource[meta_data_attributes][#{@i}][value]", :type => "text", :value => meta_datum.nil? ? nil : meta_datum.value, :name => "resource[meta_data_attributes][#{@i}][value]", :maxlength => definition.length_max}
 - else
   %textarea.block{:id => "resource[meta_data_attributes][#{@i}][value]", :name => "resource[meta_data_attributes][#{@i}][value]"}><
