ui: implement new action bar for Entries, Sets and Filtersets
- re-order all the buttons/menu entries
- move login button to top nav for consistency)

Squashed commit of the following:

commit 69b34cb427c957f8d434e839cead0d887256994f
Author: Max F. Albrecht <1@178.is>
Date:   Thu Nov 20 15:36:01 2014 +0100

    also port the new menu to filter_set

commit 073a840567fc394b595ac5c3891b5422462dafef
Author: Max F. Albrecht <1@178.is>
Date:   Thu Aug 21 17:47:15 2014 +0200

    fixing tests

    (also some real bugs)

commit 652d92d345011e2315bc95285044d7d2c7c7abc7
Author: Max F. Albrecht <1@178.is>
Date:   Thu Aug 21 16:54:47 2014 +0200

    resources: actions menu: adressen without 'verwalten'

commit b1b044bfe0773f65fbdf2b41d54bc8c13fb34eb1
Author: Max F. Albrecht <1@178.is>
Date:   Thu Aug 21 16:54:24 2014 +0200

    resources: actions menu: move up 'organize'

commit 0d0169c7de0ac66f8653d0349dcd5907803ada87
Author: Max F. Albrecht <1@178.is>
Date:   Thu Aug 21 16:53:00 2014 +0200

    simpler login_action, move to top navigation

commit 55cd72c9220873454df7a7adf0a45d73084c38c8
Author: Max F. Albrecht <1@178.is>
Date:   Tue Aug 5 17:51:24 2014 +0200

    ui: implement new action bar for Entries and Sets

--- a/app/views/application/_login_action.html.haml
+++ b/app/views/application/_login_action.html.haml
@@ -1,7 +1,6 @@
-- primary = (!!defined?(primary) and !primary.nil?) ? primary : true
 - if current_user.is_guest?
   .dropdown.ui-dropdown.stick-right
-    %a.dropdown-toggle{:href => root_path, :class => primary ? "primary-button" : "button"}
+    %a.button.tertiary-button{:href => root_path}
       %i.icon-man_silhouette
       = _("Log in")
 
