--- a/app/views/application/header/_logged_out.html.haml
+++ b/app/views/application/header/_logged_out.html.haml
@@ -5,3 +5,7 @@
     = render "application/header/brand"
     
     = render "application/navigation"
+    
+    .ui-header-user
+      .stick-right
+        = render :partial => "login_action"
