--- a/app/views/media_resources/actions/_delete.html.haml
+++ b/app/views/media_resources/actions/_delete.html.haml
@@ -1,5 +1,2 @@
-%li.separator
-%li.ui-drop-item
-  %a{:title => _("Delete"), :"data-delete-action" => true}
-    %i.icon-trash.mid
-    = _("Delete")
+%a.button{"data-delete-action" => true, title: _("Delete")}
+  %i.icon-trash
