--- a/app/views/media_resources/actions/_edit.html.haml
+++ b/app/views/media_resources/actions/_edit.html.haml
@@ -1,4 +1,2 @@
-%li.ui-drop-item
-  %a{:href => edit_media_resource_path(mr)}
-    %i.icon-pen.mid
-    = _("Edit metadata")
+%a.button{:href => edit_media_resource_path(media_resource), title: _("Edit metadata")}
+  %i.icon-pen
