--- a/app/views/media_resources/actions/_visualize_my_component_with.html.haml
+++ b/app/views/media_resources/actions/_visualize_my_component_with.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
-  %a{:title => _("Visualize relationship between items as a graph"), :href => "/visualization/my_component_with/#{mr.id}", :target => "_blank"}
+  %a{:title => _("Visualize relationship between items as a graph"), :href => "/visualization/my_component_with/#{media_resource.id}", :target => "_blank"}
     %i.icon-vis-graph.mid
     = _("Show connections")
