--- a/app/views/media_sets/_actions.html.haml
+++ b/app/views/media_sets/_actions.html.haml
@@ -1,35 +1,49 @@
+:ruby
+  @is_guest= current_user.is_guest?
+  @is_owner= @media_set.user == current_user
+  @is_admin= current_user.is_admin?
+  @can_manage= current_user.authorized?(:manage, @media_set)
+  @can_delete= current_user.authorized?(:delete, @media_set)
+
+
 .ui-body-title-actions
-  - unless current_user.is_guest?
-    = render :partial => "media_resources/actions/clipboard_toggle"
-    = render :partial => "media_resources/actions/favor_toggle", :locals => {mr: @media_set}
+  
+  - unless @is_guest
+    = render "media_resources/actions/clipboard_toggle"
+    = render "media_resources/actions/favor_toggle", media_resource: @media_set
+    %span.action-separator
 
-    .dropdown.ui-dropdown.stick-right
-      %a#resource-action-button.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
-        = _("Further actions")
-        %i.icon-arrow-down.bright.stand-alone
-      %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
+  -# = render "media_resources/actions/browse"
+  
+  - if @can_edit
+    = render "media_resources/actions/edit", media_resource: @media_set
 
-        -if @can_edit
-          = render :partial => "media_resources/actions/edit", :locals => {mr: @media_set}
-       
+  - if @can_delete
+    = render "media_resources/actions/delete"
+
+  .dropdown.ui-dropdown.stick-right
+    %a#resource-action-button.button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown", href: "#"}
+      = _("Further actions")
+      %i.icon-arrow-down.stand-alone
+
+    %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", role: "menu"}
+
+      - unless @is_guest
         = render "media_resources/actions/permissions", media_resource: @media_set
-
-        = render :partial => "media_resources/actions/organize"
-
+        = render "media_resources/actions/organize"
         - if @can_edit
-          = render :partial => "media_sets/actions/highlight"
+          = render "media_sets/actions/highlight"
+          = render "media_sets/actions/cover"
+        %li.separator
 
-        - if @can_edit
-          = render :partial => "media_sets/actions/cover"
+      - if @is_owner
+        = render "media_resources/actions/visualize_my_component_with", media_resource: @media_set
 
-        - if @media_set.user == current_user
-          = render :partial => "media_resources/actions/visualize_my_component_with", :locals => {mr: @media_set}
+      = render "media_resources/actions/urls", media_resource: @media_set
 
-        = render "media_resources/actions/urls", media_resource: @media_set
-
-        - if current_user.authorized?(:delete, @media_set)
-          = render :partial => "media_resources/actions/delete"
-
-  - else
-
-    = render :partial => "login_action"
+      - if @is_admin
+        %li.separator
+        %li.ui-drop-item
+          %a{:href => app_admin_media_set_path(@media_set)}
+            %i.icon-admin.mid
+            = _("MediaEntry in the Admin Interface")
