--- a/app/views/filter_sets/_actions.html.haml
+++ b/app/views/filter_sets/_actions.html.haml
@@ -1,30 +1,38 @@
-- can_edit = current_user.authorized?(:edit,@filter_set)
+:ruby
+  @is_guest= current_user.is_guest?
+  @is_owner= @filter_set.user == current_user
+  @is_admin= current_user.is_admin?
+  @can_edit = current_user.authorized?(:edit, @filter_set)
+  @can_manage= current_user.authorized?(:manage, @filter_set)
+  @can_delete= current_user.authorized?(:delete, @filter_set)
+
 .ui-body-title-actions
-  - unless current_user.is_guest?
-    = render :partial => "media_resources/actions/clipboard_toggle"
-    = render :partial => "media_resources/actions/favor_toggle", :locals => {mr: @filter_set}
+  
+  - unless @is_guest
+    = render "media_resources/actions/clipboard_toggle"
+    = render "media_resources/actions/favor_toggle", media_resource: @filter_set
+    %span.action-separator
+  
+  - if @can_edit
+    = render "media_resources/actions/edit", media_resource: @filter_set
 
-    .dropdown.ui-dropdown.stick-right
-      %a#resource-action-button.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
-        = _("Further actions")
-        %i.icon-arrow-down.bright.stand-alone
-      %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
+  - if @can_delete
+    = render "media_resources/actions/delete"
 
-        -if can_edit
-          = render :partial => "filter_sets/actions/edit_filter"
+  .dropdown.ui-dropdown.stick-right
+    %a#resource-action-button.button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown", href: "#"}
+      = _("Further actions")
+      %i.icon-arrow-down.stand-alone
 
-        -if can_edit
-          = render :partial => "media_resources/actions/edit", :locals => {mr: @filter_set}
-       
+    %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", role: "menu"}
+      - if @can_edit
+        = render "filter_sets/actions/edit_filter"
+
+      - unless @is_guest
         = render "media_resources/actions/permissions", media_resource: @filter_set
+        = render "media_resources/actions/organize"
 
-        = render :partial => "media_resources/actions/organize"
+        %li.separator
 
-        = render "media_resources/actions/urls", media_resource: @filter_set
+      = render "media_resources/actions/urls", media_resource: @filter_set
 
-        - if can_edit
-          = render :partial => "media_resources/actions/delete"
-
-  - else
-
-    = render :partial => "login_action"
