--- a/app/views/media_resources/actions/_favor_toggle.html.haml
+++ b/app/views/media_resources/actions/_favor_toggle.html.haml
@@ -1,2 +1,2 @@
 %a.button{:"data-favor-toggle" => true, :title => _("Add to/remove from favorites")}
-  %i.icon-star-empty.ui-thumbnail-action-favorite{:class => current_user.favorites.include?(mr) ? "active" : ""}
+  %i.icon-star-empty.ui-thumbnail-action-favorite{:class => current_user.favorites.include?(media_resource) ? "active" : ""}
